--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- ✅ Only one header, with Cart & Wishlist -->
     <header class="header">
       <div class="brand">
-        <div class="logo"><img src="c:\Users\hema\OneDrive\Pictures\tamil\wboo\logo.jpg" alt="WowBuys Logo"></div>
+        <div class="logo"><img src="c:\Users\hema\OneDrive\Pictures\tamil\wboo\logowbo.jpg" alt="WowBuys Logo"></div>
         <div>
           <h1 class="title">WowBuys</h1>
           <div class="sub">Handpicked Deals • Affiliate</div>
