--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,17 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>WowBuys – Handpicked Deals</title>
 <style>
-  :root {
-  --bg: #fab5dc;          /* Light Pink Background */
-  --card: #ffffff;        /* White Card */
-  --muted: #9ca3af;       /* Soft Grey */
-  --text: #2d2d2d;        /* Dark Text */
-  --primary: #e75480;     /* Rose Pink */
-  --primary-2: #a78bfa;   /* Soft Violet Accent */
-  --ring: rgba(231, 84, 128, 0.3);  
-  --shadow: 0 8px 25px rgba(231, 84, 128, 0.15);  
-  --radius: 20px;
-}
+  :root{
+    --bg:#f8f9fc;
+    --card:#ffffff;
+    --muted:#586174;
+    --text:#0b0f14;
+    --primary:#6b46ff;
+    --primary-2:#0fb8ff;
+    --ring:rgba(15,184,255,.35);
+    --shadow:0 8px 25px rgba(20,40,80,.1);
+    --radius:18px;
+  }
   *{box-sizing:border-box}
   body{
     margin:0; font:15px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
@@ -38,7 +36,7 @@
   .header{
     margin-top:14px; display:flex; gap:14px; align-items:center; justify-content:space-between;
     background: var(--card); border-radius: var(--radius); padding:14px 16px;
-    box-shadow: var(--shadow);
+    box-shadow: var(--shadow); flex-wrap:wrap;
   }
   .brand{display:flex; align-items:center; gap:12px}
   .logo img{width:46px; height:46px; border-radius:12px; object-fit:cover;}
@@ -48,6 +46,7 @@
   .pill{
     padding:8px 12px; border-radius:999px; background:var(--card); color:var(--text);
     text-decoration:none; border:1px solid rgba(0,0,0,.08); transition:.2s;
+    font-size:14px;
   }
   .pill:hover{border-color: var(--ring); transform: translateY(-1px)}
 
@@ -57,6 +56,7 @@
   .input, .select{
     width:100%; padding:14px 16px; border-radius:14px; border:1px solid rgba(0,0,0,.12);
     background: var(--card); color:var(--text); outline:none; box-shadow: var(--shadow);
+    font-size:15px;
   }
   .input:focus, .select:focus{border-color: var(--ring)}
 
@@ -90,6 +90,7 @@
   .btn{
     padding:10px 12px; border-radius:12px; border:none; text-decoration:none; font-weight:700;
     background: linear-gradient(90deg, var(--primary), var(--primary-2)); color:#fff; box-shadow: var(--shadow);
+    font-size:14px;
   }
   .btn:hover{filter:brightness(1.05)}
 
@@ -100,6 +101,16 @@
   .muted{color:var(--muted)}
 
   .footer{opacity:.75; text-align:center; margin:24px 0 8px; font-size:13px}
+
+  /* 📱 Mobile adjustments */
+  @media (max-width:600px){
+    body{ padding:10px; font-size:14px; }
+    .title{ font-size:18px; }
+    .pill{ padding:6px 10px; font-size:13px; }
+    .input, .select{ padding:10px 12px; font-size:14px; }
+    .btn{ padding:8px 10px; font-size:13px; }
+    .header{flex-direction:column; align-items:flex-start; gap:10px;}
+  }
 </style>
 </head>
 <body>
@@ -112,9 +123,9 @@
     <!-- ✅ Only one header, with Cart & Wishlist -->
     <header class="header">
       <div class="brand">
-        <div class="logo"><img src="c:\Users\hema\OneDrive\Pictures\tamil\wboo\logowbo.jpg" alt="WowBuys Logo"></div>
+        <div class="logo"><img src="c:\Users\hema\Downloads\wowwbuys logo.png" alt="WowBuys Logo"></div>
         <div>
-          <h1 class="title">WowBuys</h1>
+          <h1 class="title">WowBuysOfficial</h1>
           <div class="sub">Handpicked Deals • Affiliate</div>
         </div>
       </div>
@@ -194,9 +205,5 @@
       <h2>Contact</h2>
       <p class="muted">Instagram DM: <a class="pill" href="https://instagram.com/wowbuysofficial" target="_blank" rel="noopener">@wowbuysofficial</a></p>
     </section>
-
-    
-  </div>
-  <script src="script.js"></script>
 </body>
 </html>
