--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- ✅ Only one header, with Cart & Wishlist -->
     <header class="header">
       <div class="brand">
-        <div class="logo"><img src="c:\Users\hema\Downloads\wowwbuys logo.png" alt="WowBuys Logo"></div>
+        <div class="logo"><img src="wowwbuys logo.png" alt="WowBuys Logo"></div>
         <div>
           <h1 class="title">WowBuysOfficial</h1>
           <div class="sub">Handpicked Deals • Affiliate</div>
