--- a/index.html
+++ b/index.html
@@ -140,9 +140,25 @@
     <!-- Controls -->
     <div class="controls">
       <input class="input" placeholder="Search products…" />
-      <select class="select"><option>All Categories</option><option>Electronics</option><option>Home</option><option>Beauty</option><option>Fitness</option></select>
-      <select class="select"><option>Sort: Featured</option><option>Latest</option><option>Price: Low → High</option><option>Price: High → Low</option></select>
+      
+      <!-- Categories with Emoji -->
+      <select class="select">
+        <option>📂 All Categories</option>
+        <option>📱 Electronics</option>
+        <option>🏠 Home</option>
+        <option>💄 Beauty</option>
+        <option>💪 Fitness</option>
+      </select>
+      
+      <!-- Sort with Emoji -->
+      <select class="select">
+        <option>🔝 Sort: Featured</option>
+        <option>🆕 Latest</option>
+        <option>⬇ Price: Low → High</option>
+        <option>⬆ Price: High → Low</option>
+      </select>
     </div>
+
     <div class="chips">
       <span class="chip">⚡ Fast-moving</span>
       <span class="chip">⭐ Top-rated</span>
