--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
           </div>
         </div>
           <article class="card">
-          <div class="thumb"><img src="" alt="Product name"></div>
+          <div class="thumb"><img src="p.img/Screenshot_20251009_153931.jpg" alt="Product name"></div>
         <div class="content">
           <div class="tag">apparel&accessories</div>
           <h3 class="name"> Men's Casual Button Down Shirts Long Sleeve Linen Shirt Fashion Textured Beach Summer Shirts</h3>
@@ -381,7 +381,7 @@
           </div>
         </div>
           <article class="card">
-          <div class="thumb"><img src="" alt="Product name"></div>
+          <div class="thumb"><img src="p.img/Screenshot_20251009_154029.jpg" alt="Product name"></div>
         <div class="content">
           <div class="tag">apparel&accessories</div>
           <h3 class="name">Men Cotton Regular Fit Shirt </h3>
@@ -392,7 +392,7 @@
           </div>
         </div>
         <article class="card">
-          <div class="thumb"><img src="" alt="Product name"></div>
+          <div class="thumb"><img src="p.img/Screenshot_20251009_154029.jpg" alt="Product name"></div>
         <div class="content">
           <div class="tag">apparel&accessories</div>
           <h3 class="name">Men Cotton Regular Fit Shirt </h3>
@@ -403,7 +403,7 @@
           </div>
         </div>
         <article class="card">
-          <div class="thumb"><img src="" alt="Product name"></div>
+          <div class="thumb"><img src="p.img/Screenshot_20251009_154029.jpg" alt="Product name"></div>
         <div class="content">
           <div class="tag">apparel&accessories</div>
           <h3 class="name">Turkeys-Shirt </h3>
@@ -415,7 +415,7 @@
         </div>
         
         <article class="card">
-          <div class="thumb"><img src="" alt="Product name"></div>
+          <div class="thumb"><img src="p.img/Screenshot_20251006_151906.jpg" alt="Product name"></div>
         <div class="content">
           <div class="tag">apparel&accessories</div>
           <h3 class="name">Stretchable Formal Pant Trousers | Stylish Slim Fit Men's Wear Trousers for Office or Party | Polycotton Knitted Fabric </h3>
